# TetrisV2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  platformio.ini  todo.txt
include/: action.h  bag.h  board.h  board_impl.h  board_ui.h  brick.h  brick_generator.h  brick_generator_impl.h  brick_sources.h  bricks_source.h  color.h  color_codes_source.h  color_id_name.h  color_name.h  color_sources.h  config.h  console_game_controller_impl.h  console_matrix_display_impl.h  cube.h  game.h  game_controller.h  game_controller_key_codes.h  game_impl.h  game_settings.h  game_state.h  game_ui.h  game_ui_console_impl.h  game_ui_mock.h  input_receiver_mock.h  matrix.h  matrix_display.h  matrix_display_game_ui_impl.h  matrix_game_ui_impl.h  ncurses_colors.h  pixel.h  rng.h  rng_impl.h  rng_mock.h  score_counter.h  score_counter_impl.h  (+8 more)
include/board/: board.h  board_impl.h  board_mock.h
include/brick/: bag.h  brick.h  brick_generator.h  brick_generator_impl.h  brick_name.h
include/config/: config.h  filled_config.h
include/cube/: cube.h
include/game/: bricks.h  game.h  game_impl.h  game_state.h  settings.h  state.h  stats.h
include/game_controller/: console_game_controller_impl.h  game_controller.h  game_controller_key_codes.h  main_loop.h
include/rng/: rng.h  rng_impl.h  rng_mock.h
include/run_tetris/: main_loop.h  run_tetris.h
include/score_counter/: score_counter.h  score_counter_impl.h  (+1 more)
includes/: brick.h  color.h  game_state.h  input_receiver.h  pixel.h  timer_mock.h  vector2.h
src/: CMakeLists.txt  board_impl.cpp  brick.cpp  brick_generator_impl.cpp  config.cpp  console_game_controller_impl.cpp  console_main.cpp  console_matrix_display_impl.cpp  game_controller.cpp  game_impl.cpp  game_ui_console_impl.cpp  game_ui_mock.cpp  input_receiver_mock.cpp  led_main.cpp  main.cpp  matrix_display_game_ui_impl.cpp  matrix_game_ui_impl.cpp  ncurses_colors.cpp  pixel.cpp  rng_impl.cpp  rng_mock.cpp  score_counter_impl.cpp  score_counter_mock.cpp  timer_impl.cpp  timer_mock.cpp  vector2.cpp  vector_2.cpp
src/board/: board_impl.cpp
src/brick/: brick.cpp
src/config/: config.cpp
src/config/input_reciever/led/: input_config.cpp
src/config/keyboard/console/: config.cpp
src/config/keyboard/led/: config.cpp
src/config/matrix/console/: matrix_config.cpp
src/config/matrix/led/: matrix_config.cpp
src/config/matrix_display/console/: config.cpp  matrix_config.cpp
src/config/matrix_display/led/: config.cpp  matrix_config.cpp
src/game/: game_impl.cpp
src/game_controller/: console_game_controller_impl.cpp  game_controller.cpp  main_loop.cpp
src/main/console/: main.cpp
src/main/led/: main.cpp
src/run_tetris/: main_loop.cpp  run_tetris.cpp
src/timer/: timer_impl.cpp
src/ui/: console_matrix_display_impl.cpp  matrix_display_game_ui_impl.cpp  ncurses_colors.cpp  progress_bar.cpp  text_area.cpp
src/ui/color/led/: rgb_color.cpp  rgb_colors.cpp
src/ui/game_ui/: matrix_display_game_ui_impl.cpp
src/ui/keyboard/led/: led_keyboard_impl.cpp
src/ui/matrix_display/console/: console_matrix_display_impl.cpp  create_matrix_display_impl.cpp  ncurses_colors.cpp
src/ui/matrix_display/led/: create_matrix_display_impl.cpp  led_matrix_display_impl.cpp
src/ui/progress_bar/: progress_bar.cpp
src/ui/render/brick_preview/: brick_preview.cpp
src/ui/render/container/: container.cpp
src/ui/render/cubes/: cubes.cpp
src/ui/render/progress_bar/: progress_bar.cpp
src/ui/render/text/: text.cpp
src/ui/render/text/font/: fixed_width.cpp  font.cpp
src/ui/text_area/: text_area.cpp
src/ui/text_area/font/: fixed_width.cpp  font.cpp
test/: CMakeLists.txt  test_bag.cpp  test_board_impl.cpp  test_brick.cpp  test_brick_generator_impl.cpp  test_cube.cpp  test_game_impl.cpp  test_pixel.cpp  test_score_counter_impl.cpp  test_vector_2.cpp
test/bag/: test_bag.cpp
test/board/: test_board_impl.cpp
test/brick/: test_bag.cpp  test_brick.cpp  test_brick_generator_impl.cpp
test/cube/: test_cube.cpp
test/game/: test_game_impl.cpp
test/score_counter/: test_score_counter_impl.cpp
test/ui/render/container/: test_container.cpp
test/ui/render/cubes/: test_cubes.cpp
test/ui/render/progress_bar/: test_progress_bar.cpp
test/vector2/: test_vector2.cpp
test/vector_2/: test_vector_2.cpp
(+95 files in other folders)
